# tiny-ci-autofix-demo

./: README.md  pyproject.toml
.codex/commands/: fix-tests.md
.codex/prompts/: fix-ci.prompt.md
.github/workflows/: ci.yml  codex-autofix.yml  grade.yml
src/: math_utils.py  string_utils.py
src/tiny_ci_autofix_demo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_math_utils.py
