[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-ci-autofix-demo"
version = "0.1.0"
description = "Tiny self-healing CI demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["math_utils"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
